temporarily disable workflow

--- a/.github/workflows/basic-demo.yml
+++ b/.github/workflows/basic-demo.yml
@@ -1,6 +1,9 @@
 name: Basic Workflow
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+on:
+  push:
+    branches:
+      - 'noop'
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
