--- a/.github/workflows/new-issues.yml
+++ b/.github/workflows/new-issues.yml
@@ -1,4 +1,5 @@
 name: New Issues Management
+run-name: Handling issue ${{ github.event.issue.number }} ${{ github.event.issue.title }}
 on:
   issues:
     types:
