add demo of using step output

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,9 +25,13 @@ jobs:
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
+        id: setup-dotnet
         if: contains(steps.changed-files.outputs.all_changed_files, 'DotnetApp/')
         with:
           dotnet-version: 8.0.x
+
+      - run: |
+          echo 'Initiating build and test for .NET v${{ steps.setup-dotnet.outputs.dotnet-version }}'
 
       - name: Restore dependencies
         working-directory: DotnetApp
