--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Initiating build and test with .NET v${{ steps.setup-dotnet.outputs.dotnet-version }}
         run: |
-          echo 'Initiating build and test with .NET v${{ steps.setup-dotnet.outputs.dotnet-version }}'
+          echo 'Using .NET v${{ steps.setup-dotnet.outputs.dotnet-version }}'
 
       - name: Restore dependencies
         working-directory: DotnetApp
