--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,9 +5,9 @@ on:
   pull_request:
     branches:
       - main
-  merge_group:
-    types:
-      - checks_requested
+  # merge_group:
+  #   types:
+  #     - checks_requested
 
 jobs:
   test_dotnet:
