--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,8 +3,8 @@ run-name: Running tests for ${{ github.event_name }} on ${{ github.ref_name }}
 
 on:
   pull_request:
-    branches:
-      - main
+    # branches:
+    #   - main
   # merge_group:
   #   types:
   #     - checks_requested
