--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,13 +1,10 @@
 name: Run Tests
-run-name: Running tests for ${{ github.event_name }} on ${{ github.ref_name }}
+run-name: Running tests for ${{ github.event_name }} on \#${{ github.ref_name }}
 
 on:
   pull_request:
     branches:
       - main
-  merge_group:
-    types:
-      - checks_requested
 
 jobs:
   test_dotnet:
