fix small syntax error with displaying backslash

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,5 +1,5 @@
 name: Run Tests
-run-name: Running tests for ${{ github.event_name }} on \#${{ github.ref_name }}
+run-name: 'Running tests for ${{ github.event_name }} on #${{ github.ref_name }}'
 
 on:
   pull_request:
